# show-current-weather-rust

./: Cargo.toml
src/: main.rs
