[package]
name = "show_current_weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
geolocation = "0.2.1"
serde_json = "1.0.100"
chrono = "0.4.26"
